--- a/portfolio_app/static/css/index.css
+++ b/portfolio_app/static/css/index.css
@@ -35,6 +35,7 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+  transition: ease-in-out .4s;
 }
 body{
   width: 100%;
@@ -155,42 +156,18 @@ button>.active{
   margin-right: 5px;
 }
 /*Styling paragraph next to the image on landing page*/
-.greeting>.intro_mess{
-  border:4px solid var(--gold);
-  position: relative;
-  text-align: left;
-  left: 10%;
-  padding:5%;
-  width: 40%;
-  height: 310px;
-  margin-top: 1%;
-  overflow: hidden;
-  background-color: var(--blue);
-  color: white;
-  border-radius: 15px;
-  line-height: 1.8em;
-  font-size: 1.15em;
-  font-family: nexa;
-  font-style: 800;
-}
-.greeting>.intro_mess>a{
-  color: white;
-  font-family: nexa;
-  font-size: 1.3em;
-}
-.greeting .tagline, #description{
-  margin: 5% 0% 5% 0%;
-  text-align: center;
-  font-family: nexa;
-  font-size: 1.4em;
-}
 #description{
-  background-color: var(--brown);
-  padding: 3%;
-  color: white;
+  padding: 10px;
+  color: black;
   font-size: 1.2em;
-  line-height: 1.4em;
-  margin-top: -2%;
+}
+.horizontal{
+  height: 2px;
+  background-color: var(--brown);
+}
+cite{
+  font-family: 'Nexa';
+  font-style: italic;
 }
 /*styling for new item id galllery, after the mapline befor contacts page on index,html*/
 #gallery{
@@ -200,8 +177,42 @@ button>.active{
   width: 100%;
   overflow-x: scroll;
 }
-#gallery img{
-  margin: 0%;
+#gallery>.card:hover{
+  z-index: 3;
+}
+#gallery>.card{
+  height: 100%;
+  width: auto;
+  min-width: 200px;
+  border-radius: 5px;
+}
+#gallery>.card>.card-image{
+  height: 100%;
+  width: auto;
+  padding: 0px;
+}
+#gallery>.card>.card-image>img{
+  height: 100%;
+  width: auto;
+}
+#gallery>.card>.card-body{
+  opacity: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  padding: 10px;
+  width: auto;
+  height: 100%;
+  background-color: rgb(0, 0, 0, .7);
+  color: white;
+  backdrop-filter: blur(5px);
+
+}
+#gallery>.card>.card-body:hover{
+  opacity: 100%;
+  transition:cubic-bezier(3, 0, 0, 1) .4s;
 }
 #gal{
   text-align: center;
@@ -245,34 +256,50 @@ button>.active{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-top: 1%;
-  line-height: 1.5em;
-  width: 90%;
-  padding: 5%;
+  width: 100%;
 }
 #landing{
-  background-image: url('../images/hexagonshadow.jpg');
+  background-color: white;
   background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: 0;
-  height: 80vh;
-  margin-top: -2vh;
-  padding: 2vh 0;
-  width: 99 vw;
+  height: auto;
+  width: 99vw;
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+}
+.banner{
+  width: 80vw;
+}
+.banner>img{
+  width: 100% ;
+}
+
+.greeting{
+  background-image: url('../images/organic_blob_10_384.png');
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: -80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.intro_mess{
+  width: 500px;
+  line-height: 2em;
+  text-align: center;
+  font-size: 1.8em;
+  color: rgb(24,48,108);
+  text-shadow:2px 1px 1px white;
+  padding-left: 15%;
 }
 #the-story{
-  margin-top: -8%;
   width: 90%;
-  padding: 10% 2% 0% 2%;
   border-radius: 15px;
-  background-size:104% 96%;
   background-position: center;
-  overflow: visible;
-  background-repeat: no-repeat;
+  height: auto;
   color: black;
-}
-#the-story p{
-  margin-bottom: 3%;
+  border: 2px sold red;
 }
 #mapline{
   line-height: 10em;
