--- a/portfolio_app/templates/all_templates/projects.html
+++ b/portfolio_app/templates/all_templates/projects.html
@@ -89,13 +89,13 @@ The class vertical rule is for adding a line, as in the design-->
   {% if projects %}
   {% for project in projects %}
   <div class="card col-md-5">
+    <h4 class="projecttitle">{{project.title}}</h4>
     <div class="card-image">
       <div id="project1" style="background-image: url('{{project.image_path.url}}'); width: 100%;">
 
       </div>
     </div>
     <div class="card-body p-4">
-      <h4 class="projecttitle">{{project.title}}</h4>
       <p class="projectDescription">{{project.description|safe}}</p>
       <div class="card-footer">
         Technologies used:
@@ -110,10 +110,10 @@ The class vertical rule is for adding a line, as in the design-->
   <h5 class="bold mute text-center">No projects found!</h5>
   {%endif%}
 </div>
-<a href="projects.html#navbar" id="projectstab">&UpArrowBar;Back Top</a>
+
 <div class="github_repo">
   <div id="sidebar">
-    <h3>Github Repo Links</h3>
+    <h3>Github Account:</h3>
     {% if github_links %}
     {% for link in github_links %}
     <ol type="1">
@@ -121,29 +121,9 @@ The class vertical rule is for adding a line, as in the design-->
     </ol>
     {% endfor %}
     {% else %}
-    <h6 class="bold mute text-center">
-      No Live Links found
+    <h6 class="bold mute text-center github">
+      <a href="https://github.com/COdingaorg" target="_blank"><img src="../../static/images/github.png" alt="" width="50px" style="background-color: white; border-radius: 50%;"></a>
     </h6>
-    {%endif%}
-  </div>
-</div>
-<div class="topp">
-  <div id="skills">
-    <!--Hightlights the technologies used. Images to be used as backgrounds. Add hover-->
-    <h3>Technology used</h3>
-    {% if skills %}
-    {% for skill in skills %}
-    <div id="skill" style="background-image: url('{{skill.images_path.url}}');">
-      <div class="skill-card">
-         <p>{{skill.title}}</p>
-      </div>
-      <div class="skill-body">
-        <p>{{skill.description}}</p>
-      </div>      
-    </div>
-    {% endfor %}
-    {%else%}
-    <h6 class="bold mute text-center">No skills Found</h6>
     {%endif%}
   </div>
 </div>
