--- a/portfolio_app/templates/all_templates/index.html
+++ b/portfolio_app/templates/all_templates/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div id="background" class="d-flex flex-row flex-wrap align-items-center justify-content-space-evenly">
+  <div id="background">
     <!--This part illustrates the background section. On the right side is a mapline, in future these are made link to different parts of the story. Once cicked the corresponding part of the story highlights-->
     <div id="the-story">
       <h3 class="bold">Background</h3>
